--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./app/index.js"
+    "start": "node ./app/index.js",
+    "dev": "nodemon ./app/index.js"
   },
   "author": "superxmy",
   "license": "ISC",
